--- a/Recursos.qrc
+++ b/Recursos.qrc
@@ -7,5 +7,6 @@
         <file>Recursos/boton.png</file>
         <file>Recursos/salvar.png</file>
         <file>Recursos/calcular.png</file>
+        <file>Recursos/estilo-de-vida-saludable.png</file>
     </qresource>
 </RCC>
